--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-.consumers {
-    display: flex;
-    flex-direction: column;
-}
-
-h1 {
-    text-align: center;
+body > * {
+    font-size: 2rem;
 }
 
 input {
-    margin: 1rem;
-    font-size: 2rem;
+    font-size: inherit;
+    width: 100%;
+}
+
+.providers {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.consumer {
+    margin: 5;
 }
